# sac

./: CLAUDE.md  CMakeLists.txt
src/sw/sac/: agent.cpp  agent.h  errors.h  http_client.cpp  http_client.h  llm_client.cpp  llm_client.h  main.cpp
src/sw/sac/providers/: anthropic_provider.cpp  anthropic_provider.h  llm_provider.cpp  llm_provider.h  moonshot_provider.cpp  moonshot_provider.h  openai_provider.cpp  openai_provider.h
src/sw/sac/tools/: edit.cpp  glob.cpp  grep.cpp  ls.cpp  read.cpp  tools.cpp  tools.h  write.cpp
